cmake_minimum_required(VERSION 2.8)
PROJECT( xiSensorDefectsCorrection )

SET(T_NAME xiSyncCam)

FILE(GLOB_RECURSE SRC_LIST *.cpp)

IF (SRC_LIST)
	FOREACH (SFILE ${SRC_LIST})
		MESSAGE(STATUS "CPP: ${SFILE}")
	ENDFOREACH (SFILE)
ENDIF (SRC_LIST)

SET( XIMEA_INCLUDES "/opt/XIMEA/includes" )

SET( CXX_FLAGS "-g3 -Wall -fmessage-length=0" )
# SET( CXX_LINK_FLAGS "-lm3api -lopencv_core -lopencv_highgui -lopencv_imgproc -L/usr/local/lib" )
SET( CXX_LINK_FLAGS "" )

FIND_LIBRARY( LIB_OPENCV_CORE NAMES opencv_core )
FIND_LIBRARY( LIB_OPENCV_HIGHGUI NAMES opencv_highgui )
FIND_LIBRARY( LIB_OPENCV_IMGPROC NAMES opencv_imgproc )
FIND_LIBRARY( LIB_XIMEA NAMES m3api )

MESSAGE(STATUS "${LIB_OPENCV_CORE}")
MESSAGE(STATUS "${LIB_OPENCV_HIGHGUI}")
MESSAGE(STATUS "${LIB_OPENCV_IMGPROC}")
MESSAGE(STATUS "${LIG_XIMEA}")

ADD_EXECUTABLE( ${T_NAME} ${SRC_LIST} )

TARGET_INCLUDE_DIRECTORIES( ${T_NAME} PRIVATE ${XIMEA_INCLUDES} )
TARGET_LINK_LIBRARIES( ${T_NAME} ${LIB_XIMEA} ${LIB_OPENCV_CORE} ${LIB_OPENCV_HIGHGUI} ${LIB_OPENCV_IMGPROC} )

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${CXX_FLAGS}" )
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${CXX_LINK_FLAGS}" )
